Add Redis support for caching and rate limiting: Updated configuration, health checks, and summarize endpoint to integrate Redis. Enhanced README with Redis details and updated .gitignore for Redis files.

--- a/.gitignore
+++ b/.gitignore
@@ -128,7 +128,7 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# IDEs
+# IDE
 .vscode/
 .idea/
 *.swp
@@ -137,11 +137,15 @@ dmypy.json
 
 # OS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 
 # Docker
 .dockerignore
 
-# Logs
-logs/
-*.log
+# Redis data
+dump.rdb
